# bitcoin-cli-rs

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml
crates/bitcoin-core-rpc/: Cargo.toml
src/: cli.rs  config.rs  error.rs  logger.rs  main.rs  rpc.rs
src/commands/: address.rs  blockchain.rs  mod.rs  rpc.rs  wallet.rs
