[package]
name = "bitcoin-cli-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
